--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^1.0.3",
-    "jsonwebtoken": "^8.1.0"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
+    "mustache-express": "^1.2.5",
+    "sqlite3": "^3.1.13"
   }
 }
